@@ -3,7 +3,7 @@
  * XRDDEFAULT.C - Default external state retention routines for Nagios
  *
  * Copyright (c) 1999-2005 Ethan Galstad (nagios@nagios.org)
- * Last Modified:   03-19-2005
+ * Last Modified:   05-07-2005
  *
  * License:
  *
@@ -240,6 +240,7 @@ int xrddefault_save_state_information(char *main_config_file){
 		fprintf(fp,"\thas_been_checked=%d\n",temp_host->has_been_checked);
 		fprintf(fp,"\tcheck_execution_time=%.3f\n",temp_host->execution_time);
 		fprintf(fp,"\tcheck_latency=%.3f\n",temp_host->latency);
+		fprintf(fp,"\tcheck_type=%d\n",temp_host->check_type);
 		fprintf(fp,"\tcurrent_state=%d\n",temp_host->current_state);
 		fprintf(fp,"\tlast_state=%d\n",temp_host->last_state);
 		fprintf(fp,"\tlast_hard_state=%d\n",temp_host->last_hard_state);
@@ -293,6 +294,7 @@ int xrddefault_save_state_information(char *main_config_file){
 		fprintf(fp,"\thas_been_checked=%d\n",temp_service->has_been_checked);
 		fprintf(fp,"\tcheck_execution_time=%.3f\n",temp_service->execution_time);
 		fprintf(fp,"\tcheck_latency=%.3f\n",temp_service->latency);
+		fprintf(fp,"\tcheck_type=%d\n",temp_service->check_type);
 		fprintf(fp,"\tcurrent_state=%d\n",temp_service->current_state);
 		fprintf(fp,"\tlast_state=%d\n",temp_service->last_state);
 		fprintf(fp,"\tlast_hard_state=%d\n",temp_service->last_hard_state);
@@ -311,7 +313,6 @@ int xrddefault_save_state_information(char *main_config_file){
 		fprintf(fp,"\tperformance_data=%s\n",(temp_service->perf_data==NULL)?"":temp_service->perf_data);
 		fprintf(fp,"\tlast_check=%lu\n",temp_service->last_check);
 		fprintf(fp,"\tnext_check=%lu\n",temp_service->next_check);
-		fprintf(fp,"\tcheck_type=%d\n",temp_service->check_type);
 		fprintf(fp,"\tnotified_on_unknown=%d\n",temp_service->notified_on_unknown);
 		fprintf(fp,"\tnotified_on_warning=%d\n",temp_service->notified_on_warning);
 		fprintf(fp,"\tnotified_on_critical=%d\n",temp_service->notified_on_critical);
@@ -636,6 +637,8 @@ int xrddefault_read_state_information(char *main_config_file){
 							temp_host->execution_time=strtod(val,NULL);
 						else if(!strcmp(var,"check_latency"))
 							temp_host->latency=strtod(val,NULL);
+						else if(!strcmp(var,"check_type"))
+							temp_host->check_type=atoi(val);
 						else if(!strcmp(var,"current_state"))
 							temp_host->current_state=atoi(val);
 						else if(!strcmp(var,"last_state"))
@@ -796,6 +799,8 @@ int xrddefault_read_state_information(char *main_config_file){
 							temp_service->execution_time=strtod(val,NULL);
 						else if(!strcmp(var,"check_latency"))
 							temp_service->latency=strtod(val,NULL);
+						else if(!strcmp(var,"check_type"))
+							temp_service->check_type=atoi(val);
 						else if(!strcmp(var,"current_state"))
 							temp_service->current_state=atoi(val);
 						else if(!strcmp(var,"last_state"))
@@ -832,8 +837,6 @@ int xrddefault_read_state_information(char *main_config_file){
 							if(use_retained_scheduling_info==TRUE && scheduling_info_is_ok==TRUE)
 								temp_service->next_check=strtoul(val,NULL,10);
 						        }
-						else if(!strcmp(var,"check_type"))
-							temp_service->check_type=atoi(val);
 						else if(!strcmp(var,"notified_on_unknown"))
 							temp_service->notified_on_unknown=(atoi(val)>0)?TRUE:FALSE;
 						else if(!strcmp(var,"notified_on_warning"))
